plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.6'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}



configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//aws secretkey 사용을 위한 의존성 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws-secrets-manager-config:2.2.6.RELEASE'
	implementation 'com.amazonaws.secretsmanager:aws-secretsmanager-jdbc:1.0.8'

	//jpa 사용을 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
//	implementation 'com.h2database:h2'

	//slack montionring 의존성 추가
	implementation 'com.github.maricn:logback-slack-appender:1.6.1'
	implementation group: 'eu.bitwalker', name: 'UserAgentUtils', version: '1.17'
	implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.35.0'

	//jackson 의존성 추가
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'

	//@valid를 사용하기 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//swagger 사용하기 위한 의존성 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	//security를 사용하기 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//JWT Token을 만들기 위한 의존성 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'


	// queryDSL 설정
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	//Redis 사용을 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

}

task createTargetDir {
	doLast {
		file('target').mkdirs()
	}
}

tasks.named('build') {
	dependsOn createTargetDir
}



tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

task buildZip(type: Zip) {
	from 'build/libs'
	include '*.jar'
	from '.'
	include 'appspec.yml'
	include 'deploy.sh'
}



tasks.named('test') {
	useJUnitPlatform()
}
